# scalpel_lang

./: .gitignore  .ocamlformat  README.md  a.out  dune-project  hello.ll  scalpel_lang.opam
lib/: dune  list_ext.ml
lib/ast/: class.ml  dune  format.ml  function.ml  instruction.ml  instructions.ml  lexer.mll  mutability.ml  parser.mly  program.ml  scalpel_class.ml  scalpel_instruction.ml  scalpel_pp_lexer.mll  scalpel_pp_parser.mly  scalpel_program.ml  scalpel_type.ml  type.ml  typing.ml  value.ml
lib/code_io/: code_io.ml  dune
lib/codegen/: context.ml  dune  expression.ml  function.ml  instruction.ml  native_int32.ml  program.ml  type.ml
lib/debug/: debug.ml  dune
lib/error/: unexpected.ml
lib/list_ext/: dune
lib/raw_ast/: README.md  class.ml  dune  expression.ml  function.ml  instruction.ml  parameter.ml  program.ml
lib/typecheck/: check_program.ml  context.ml  dune  program.ml  symbol_table.ml
test/integration/: run.sh
test/integration/data/class/: Integer.sclp  basic.sclp  entry_point.sclp
test/integration/data/function/: basic.scpl  omit_parameter_type.scpl  omit_return_type.scpl
test/integration/data/instruction/: assignment.scpl  basic.scpl  branching.scpl  initialization.scpl  loop.scpl
test/integration/data/type/: basic.scpl
test/integration/data/value/: basic.scpl
